package TH1.B2;

import java.util.List;

public interface ITokenize {
    List<String> tokenize();
}
