@startuml
interface ITokenize{
    List<String tokenize()
}

class TachTu{
    - String s
    + List<String> tokenize()
}

abstract class TokenDecorator{
    # ITokenize tokenize
    + TokenDecorator(ITokenize tokenize)
    + List<String> tokenize() : List<String
}

class LoaiBoTuDung{
    # List<String> TuDaDung
    + LoaiBoTuDung(ITokenize tokenize)
    + List<String> tokenize()
}
class LoaiBoDauCau{
    # List<String> TuDaDung
    + LoaiBoTuDung(ITokenize tokenize)
    + List<String> tokenize()
}
ITokenize <|.. TachTu
ITokenize <|.. TokenDecorator
TokenDecorator --> ITokenize
LoaiBoTuDung --|> TokenDecorator
LoaiBoDauCau --|> TokenDecorator
@enduml